assets/css/style.css
/* ... */
#discography h1 {
    margin-top: 96px;
    padding: 80px 0 0;
    font-size: 180%;
    margin-bottom: 32px;
}

.albums {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.albums img {
    border-radius: 8px;
    margin: 12px 12px 12px 0;
}

i {
    width: 300px;
    margin: 12px 12px 12px 0;
}



/* Band Page */

#band-history {
    margin-top: 48px;
    box-sizing: border-box;
}

.band-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 24px;
    
}

.band-text-1 {
    grid-column: 1 / span 2;
}

.band-image-1 {
    grid-column: 3 / span 1;
}

.band-text-2 {
    grid-column: 2 / span 2;
}

.band-image-2 {
    grid-column: 1 / span 1;
}
.band-text-3 {
    grid-column: 1 / span 2;
}

.band-image-3 {
    grid-column: 3 / span 1;
}

.band-image-2a {
    display: none;
}

@media screen and (max-width: 1280px){
.band-container {
        display: grid;
        grid-template-columns: 1fr 1fr;
}

.band-text-1 {
    grid-column: 1 / span 1;
}

.band-image-1 {
    grid-column: 2 / span 1;
}

.band-text-2 {
    grid-column: 2 / span 1;
}

.band-image-2 {
    grid-column: 1 / span 1;
}

.band-text-3 {
    grid-column: 1 / span 1;
}

.band-image-3 {
    grid-column: 2 / span 1;
}

}

@media screen and (max-width: 980px) {
    .band-container {
        display: grid;
        grid-template-columns: 1fr;
    }

    .band-text-1 {
        grid-column: 1 / span 1;
    }

    .band-image-1 {
        grid-column: 1 / span 1;
    }

    .band-text-2 {
        grid-column: 1 / span 1;
        
    }

    .band-image-2 {
        display: none;
    }

    .band-image-2a {
        display: block;
        grid-column: 1 / span 1;
        
    }

    .band-text-3 {
        grid-column: 1 / span 1;
    }

    .band-image-3 {
        grid-column: 1 / span 1;
    }

}



/* .band-container {
    display: grid;
    
    grid-gap: 16px;
    
}


.band-text {
    grid-column: span 1;
    font-size: 110%;
}

.band-image {
    grid-column: span 1;
} */

.band-image img {
    border-radius: 8px;
    height: auto;
    width: 100%;
}

.band-history {
    margin-top: 0;
    margin-bottom: 24px;

}

.band-image1 {
    margin-top: 24px;
    
   
}

.band-text h3 {
        font-family: Nunito, sans-serif;
        font-weight: 500;
        color: #FBC600;
        text-transform: uppercase;
        margin-top: 36px;
        margin-bottom: 24px;
}

    /* @media screen and (min-width: 1200px) {
    .band-container {
        grid-template-columns: repeat(2, 1fr);
    }

        @media screen and (min-width: 1600px) {
            .band-container {
                grid-template-columns: repeat(3, 1fr);
            }

            .band-text {
                grid-column: 1 / span 2;
               */


    

/* Contact page*/

#contact {
    clear: both;
}

.contact-container {
    
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 24px;
}
.contact-container h3 {
    font-family: Nunito, sans-serif;
    font-weight: 500;
    color: #FBC600;
    text-transform: uppercase;
    margin-top: 36px;
    margin-bottom: 16px;
}
 .contact-container a {
    color: #f2f2f2;
    text-decoration: none;
 }

  .contact-container a:hover {
      color: #Fbc600;
      text-decoration: none;
  }
    
 #booking {
    grid-row: 2;
 }

 #merchandise {
    grid-row: 2;
 }


/* Contact form */

#contact-form {
    grid-column: 3 / span 2;
    grid-row: span 3;
}

#contact-form input {
    width: 100%;
    padding: 12px 16px;
    margin: 0 0 24px 0;
    box-sizing: border-box;
    border-radius: 8px;
    border: 3px solid #Fbc600;
    background-color: #171A1C;
    color: #F2F2F2;
    font-family: Nunito, sans-serif;
    font-weight: 300;

}

#contact-form input:focus {
    border: 3px solid #ff0000;
}

#contact-form input[type=button] {
    width: 250px;
    border: none;
    background-color: #Fbc600;
    color: #171A1C;
    font-family: Nunito, sans-serif;
    font-weight: 500;
    font-size: 120%;
    float: right;

    
}

#contact-form textarea {
    width: 100%;
    height: 240px;
    padding: 12px 16px;
    margin: 0 0 24px 0;
    box-sizing: border-box;
    border-radius: 8px;
    border: 3px solid #Fbc600;
    background-color: #171A1C;
    color: #F2F2F2;
    font-family: Nunito, sans-serif;
    font-weight: 300;
}

@media screen and (max-width: 1280px) {
    .contact-container {
        grid-template-columns: 1fr 1fr 1fr;
    
    }

    #management {
        grid-column: 1 / span 1;
    }

    #record-label {
        grid-column: 1 / span 1;

    }

    #booking {
        grid-column: 1 / span 1;
        grid-row: 3;
    }

    #merchandise {
        grid-column: 1 /span 1;
        grid-row: 4;
    }

    #contact-form {
        grid-column: 2 / span 2;
        grid-row: 1 / span 4;
    }
}

@media screen and (max-width: 1000px) {
    .contact-container {
        grid-template-columns: 1fr 1fr;

    }

    #management {
        grid-column: 1 / span 1;
    }

    #record-label {
        grid-column: 1 / span 1;

    }

    #booking {
        grid-column: 1 / span 1;
        grid-row: 3;
    }

    #merchandise {
        grid-column: 1 /span 1;
        grid-row: 4;
    }

    #contact-form {
        grid-column: 2 / span 1;
        grid-row: 1 / span 4;
    }
}

@media screen and (max-width: 500px) {
    .contact-container {
        grid-template-columns: 1fr;

    }

    #management {
        grid-column: 1 / span 1;
    }

    #record-label {
        grid-column: 1 / span 1;

    }

    #booking {
        grid-column: 1 / span 1;
        grid-row: 3;
    }

    #merchandise {
        grid-column: 1 /span 1;
        grid-row: 4;
    }

    #contact-form {
        grid-column: 1 / span 1;
        grid-row: 5;
    }
}

